# audio-difficulty

./: .gitignore  LICENSE  README.md  benchmark_data.json  change_ps_keys.py  compute_metrics.py  compute_tauc.py  get_cqt.py  get_pianoroll.py  hidden_voices.json  hidden_voices.py  hidden_voices_features.py  hidden_voices_logits.py  hv_tauc.json  make_table_basic_model.py  make_table_composer_model.py  make_table_era_model.py  make_table_multirank_model.py  model.py  multi_metrics.json  multi_tauc.json  multiperformances_features.py  multiperformances_logits.py  predict_difficulty.py  pyproject.toml  show_cqts.py  utils.py  zero_shot.py
benchmark_multiperformances/: Albéniz I.Tango in D major mvt 2 from Espana Op 165.json  Bach J.French Suite no 3 in B minor BWV 814.json  Bach J.Invention No 1 in C major BWV 772.json  Bach J.Invention No 6 in E major BWV 777.json  Bach J.Partita No 4 in D major BWV 828.json  Bach J.Prelude and Fugue No 1 in C major BWV 846.json  Bartók B.Lost Cat from For Children BB 53 Sz 42 Vol 1 No 3 Quasi adagio.json  Beethoven L.Sonata No 17 in D minor Op 31 No 2 (Tempest).json  Beethoven L.Sonata No 6 in F major Op 10 No 2.json  Beethoven L.Sonata No 8 in C minor Op 13 (Pathetique) - mvt 2 Andante cantabile.json  Beethoven L.Sonatina in G major Anh 51 - mvt 1 Moderato.json  Bennett R.Two Turtle-Doves.json  Berkeley L.Allegro No 5 from Five Short Pieces Op 4.json  Beyer F.Lyrical Piece Op 101 No 39.json  Brahms J.Waltz No 2 in E major Op 39.json  Burgmüller F.Innocence in F major Op 100 No 5.json  Chua S.Rodeo.json  Haydn J.Quadrille.json  (+37 more)
(+73 files in other folders)
